[피로그래밍 클론코딩] feat: 인터뷰 클론코딩 완성

--- a/피로그래밍 클론코딩/Interview/interview.html
+++ b/피로그래밍 클론코딩/Interview/interview.html
@@ -4,56 +4,240 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>피로그래밍</title>
+    <link rel="shortcut icon" type="image/x-icon" href="images/icon.ico">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/design.css">
 </head>
 <body>
     <div class="top">
-        <img src="images/logo.svg" alt="피로그래밍 로고">
-        <a href="#" class="list">Home</a>
-        <a href="#" class="list">About Us</a>
-        <a href="#" class="list">Portfolio</a>
-        <a href="#" class="list">Interview</a>
-        <a href="#" class="list">Gallery</a>
-        <a href="#" class="list">Recruit</a>
-    </div>
-    <div class="cohort">
-        <a href="#" class="twenty-three">< 23기</a>
-        <h2>22기</h2>
-        <a href="#" class="twenty-one">21기 ></a>
-    </div>
-    <div class="interview">
-        <div class="interview_box">
-            <div class="more">
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
-            <div class="interview_box_top">
-                <img src="images/logo.svg" alt="">
-                <div class="nterview_box_top_right">
-                    <p class="name">김규일</p>
-                    <span class="major">전공자</span>
-                </div>
-            </div>
-            <div class="interview_box_bottom">더 나은 내일로!</div>
+        <div class="top_left">
+            <img src="images/logo.svg" alt="피로그래밍 로고">
         </div>
-    </div>
-    <footer class="footer_top">
-        <div class="footer_top_left">
-            <a href="#" class="rule">PIROGRAMMIG 회칙 ></a> <br>
-            <a href="#" class="img"><img src="images/logo.svg" alt="" class="logo"></a>
-            <a href="#" class="img"><img src="images/logo.svg" alt="" class="logo"></a>
-            <a href="#" class="img"><img src="images/logo.svg" alt="" class="logo"></a> <br>
-            <a href="#" class="mail"><img src="images/logo.svg" alt="" class="logo"> pirogramming.official@gmail.com</a>
-        </div>
-        <div class="footer_top_right">
+        <div class="top_right">
             <a href="#" class="list">Home</a>
             <a href="#" class="list">About Us</a>
             <a href="#" class="list">Portfolio</a>
             <a href="#" class="list">Interview</a>
             <a href="#" class="list">Gallery</a>
             <a href="#" class="list">Recruit</a>
+        </div>
+    </div>
+    <div class="cohort">
+        <div class="nxt">
+            <a href="#" class="twenty-three">< 23기</a>
+        </div>
+        <div class="cur">
+            <h2>22기</h2>
+        </div>
+        <div class="prev">
+            <a href="#" class="twenty-one">21기 ></a>
+        </div>
+    </div>
+    <div class="interview">
+        <div class="interview_box">
+            <div class="interview_box_top">
+                <img src="images/logo.svg" alt="" width="55px" height="80px">
+                <div class="interview_box_top_right">
+                    <p class="name">김규일</p>
+                    <span class="major">전공자</span>
+                </div>
+                <div class="more">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+            <div class="interview_box_bottom">더 나은 내일로!</div>
+        </div>
+        <div class="interview_box">
+            <div class="interview_box_top">
+                <img src="images/logo.svg" alt="" width="55px" height="80px">
+                <div class="interview_box_top_right">
+                    <p class="name">김선주</p>
+                    <span class="non-major">비전공자</span>
+                </div>
+                <div class="more">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+            <div class="interview_box_bottom">해야 한다</div>
+        </div>
+        <div class="interview_box">
+            <div class="interview_box_top">
+                <img src="images/logo.svg" alt="" width="55px" height="80px">
+                <div class="interview_box_top_right">
+                    <p class="name">김수연</p>
+                    <span class="non-major">비전공자</span>
+                </div>
+                <div class="more">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+            <div class="interview_box_bottom">파이팅! 파이팅!</div>
+        </div>
+        <div class="interview_box">
+            <div class="interview_box_top">
+                <img src="images/logo.svg" alt="" width="55px" height="80px">
+                <div class="interview_box_top_right">
+                    <p class="name">김영호</p>
+                    <span class="major">전공자</span>
+                </div>
+                <div class="more">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+            <div class="interview_box_bottom">홍익대학교 재학중인 22기 김영호입니다!</div>
+        </div>
+        <div class="interview_box">
+            <div class="interview_box_top">
+                <img src="images/logo.svg" alt="" width="55px" height="80px">
+                <div class="interview_box_top_right">
+                    <p class="name">김예원</p>
+                    <span class="major">전공자</span>
+                </div>
+                <div class="more">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+            <div class="interview_box_bottom">그래도 해야지 어떡해</div>
+        </div>
+        <div class="interview_box">
+            <div class="interview_box_top">
+                <img src="images/logo.svg" alt="" width="55px" height="80px">
+                <div class="interview_box_top_right">
+                    <p class="name">김은경</p>
+                    <span class="major">전공자</span>
+                </div>
+                <div class="more">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+            <div class="interview_box_bottom">피로와 열정 !</div>
+        </div>
+        <div class="interview_box">
+            <div class="interview_box_top">
+                <img src="images/logo.svg" alt="" width="55px" height="80px">
+                <div class="interview_box_top_right">
+                    <p class="name">김은성</p>
+                    <span class="major">전공자</span>
+                </div>
+                <div class="more">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+            <div class="interview_box_bottom">피로합시다</div>
+        </div>
+        <div class="interview_box">
+            <div class="interview_box_top">
+                <img src="images/logo.svg" alt="" width="55px" height="80px">
+                <div class="interview_box_top_right">
+                    <p class="name">김재원</p>
+                    <span class="major">전공자</span>
+                </div>
+                <div class="more">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+            <div class="interview_box_bottom">웃으면 복이 와요</div>
+        </div>
+        <div class="interview_box">
+            <div class="interview_box_top">
+                <img src="images/logo.svg" alt="" width="55px" height="80px">
+                <div class="interview_box_top_right">
+                    <p class="name">김태린</p>
+                    <span class="non-major">비전공자</span>
+                </div>
+                <div class="more">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+            <div class="interview_box_bottom">해봅시다</div>
+        </div>
+        <div class="interview_box">
+            <div class="interview_box_top">
+                <img src="images/logo.svg" alt="" width="55px" height="80px">
+                <div class="interview_box_top_right">
+                    <p class="name">김현진</p>
+                    <span class="major">전공자</span>
+                </div>
+                <div class="more">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+            <div class="interview_box_bottom">Aight!Aight!</div>
+        </div>
+        <div class="interview_box">
+            <div class="interview_box_top">
+                <img src="images/logo.svg" alt="" width="55px" height="80px">
+                <div class="interview_box_top_right">
+                    <p class="name">남경민</p>
+                    <span class="major">전공자</span>
+                </div>
+                <div class="more">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+            <div class="interview_box_bottom">피로와 함께 overcome!</div>
+        </div>
+        <div class="interview_box">
+            <div class="interview_box_top">
+                <img src="images/logo.svg" alt="" width="55px" height="80px">
+                <div class="interview_box_top_right">
+                    <p class="name">민설아</p>
+                    <span class="major">전공자</span>
+                </div>
+                <div class="more">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+            <div class="interview_box_bottom">호호 부는 튜브</div>
+        </div>
+    </div>
+    <footer class="footer_top">
+        <div class="footer_box">
+            <div class="footer_top_left">
+                <div class="top_left_top">
+                    <a href="#" class="rule">PIROGRAMMIG 회칙 ></a>
+                </div>
+                <div class="top_left_middle">
+                    <a href="#" class="img"><img src="images/logo.svg" alt="" class="logo" width="23px" height="23px"></a>
+                    <a href="#" class="img"><img src="images/logo.svg" alt="" class="logo" width="23px" height="23px"></a>
+                    <a href="#" class="img"><img src="images/logo.svg" alt="" class="logo" width="23px" height="23px"></a>
+                </div>
+                <div class="top_left_bottom">
+                    <a href="#" class="mail"><img src="images/logo.svg" alt="" class="logo" width="23px" height="23px"> pirogramming.official@gmail.com</a>
+                </div>
+            </div>
+            <div class="footer_top_right">
+                <a href="#" class="list">Home</a>
+                <a href="#" class="list">About Us</a>
+                <a href="#" class="list">Portfolio</a>
+                <a href="#" class="list">Interview</a>
+                <a href="#" class="list">Gallery</a>
+                <a href="#" class="list">Recruit</a>
+            </div>
         </div>
     </footer>
     <footer class="footer_bottom">© Pirogramming. 2023 All rights reserved.</footer>
