[피로그래밍 클론코딩] feat: Interview 색 추가

--- a/피로그래밍 클론코딩/Interview/interview.html
+++ b/피로그래밍 클론코딩/Interview/interview.html
@@ -17,7 +17,7 @@
             <a href="#" class="list">Home</a>
             <a href="#" class="list">About Us</a>
             <a href="#" class="list">Portfolio</a>
-            <a href="#" class="list">Interview</a>
+            <a href="#" class="list" id="color">Interview</a>
             <a href="#" class="list">Gallery</a>
             <a href="#" class="list">Recruit</a>
         </div>
